--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ionic/storage-angular": "^3.0.6",
     "@swimlane/ngx-datatable": "^20.0.0",
     "chart.js": "^3.5.1",
+    "cordova-ios": "5.1.1",
     "cordova-plugin-statusbar": "^2.4.3",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
@@ -76,7 +77,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
-    "cordova-android": "^9.1.0",
+    "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-android-permissions": "^1.1.2",
@@ -127,7 +128,8 @@
     },
     "platforms": [
       "browser",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
