--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@ionic/storage-angular": "^3.0.6",
     "@swimlane/ngx-datatable": "^20.0.0",
     "chart.js": "^3.5.1",
-    "cordova-android": "^8.1.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
@@ -77,14 +76,16 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "cordova-android": "^9.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^6.2.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-android-permissions": "^1.1.2",
+    "cordova-plugin-cleartext": "^1.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-ionic-webview": "^5.0.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -117,18 +118,17 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-nativegeocoder": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
-      }
+      },
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
       "browser",
-      "android",
       "ios"
     ]
   }
