--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@angular/router": "~12.1.1",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@awesome-cordova-plugins/android-permissions": "^5.37.3",
-    "@awesome-cordova-plugins/splash-screen": "^5.37.3",
+    "@awesome-cordova-plugins/image-picker": "^5.39.0",
+    "@awesome-cordova-plugins/splash-screen": "^5.39.0",
     "@capacitor/android": "^3.2.5",
     "@capacitor/app": "1.0.3",
     "@capacitor/camera": "^1.1.2",
@@ -54,7 +55,12 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
+    "ora": "^6.0.1",
+    "pkg-dir": "^6.0.1",
+    "regex-not": "^1.0.2",
     "rxjs": "~6.6.0",
+    "send": "^0.17.2",
+    "split-string": "^6.1.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -81,18 +87,18 @@
     "@typescript-eslint/parser": "4.16.1",
     "cordova-android": "^10.0.0",
     "cordova-browser": "^6.0.0",
-    "cordova-ios": "^6.2.0",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-file-transfer": "git+https://github.com/apache/cordova-plugin-file-transfer.git",
+    "cordova-plugin-file-transfer": "github:apache/cordova-plugin-file-transfer",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^5.0.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
-    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-splashscreen": "5.0.3",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -108,7 +114,8 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4",
-    "webpack": "^5.57.1"
+    "webpack": "^5.57.1",
+    "webpack-dev-server": "^3.11.2"
   },
   "description": "An Ionic project",
   "config": {
@@ -121,7 +128,9 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-nativegeocoder": {
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "Use geocoder service"
+      },
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-ionic-webview": {},
