--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@ionic/storage-angular": "^3.0.6",
     "@swimlane/ngx-datatable": "^20.0.0",
     "chart.js": "^3.5.1",
+    "cordova-ios": "6.2.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
@@ -87,11 +88,10 @@
     "@typescript-eslint/parser": "4.16.1",
     "cordova-android": "^10.0.0",
     "cordova-browser": "^6.0.0",
-    "cordova-ios": "4.5.5",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-file-transfer": "github:apache/cordova-plugin-file-transfer",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -137,7 +137,8 @@
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
       },
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "browser",
